--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-HTML goes here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My GitHub Pages Site</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <h1>Hello, GitHub Pages!</h1>
+    <button id="myButton">Click me</button>
+    <p id="message"></p>
+
+    <script src="script.js"></script>
+</body>
+</html>
