--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My GitHub Pages Site</title>
+    <title>CNC Drip Feed Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <table border="1">
+  <thead>
+    <tr>
+      <th></th>
+      <th>File Name</th>
+      <th>File Size</th>
+      <th>Date/Time Added</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Row 1, Col 1</td>
+      <td>Row 1, Col 2</td>
+      <td>Row 1, Col 3</td>
+      <td>Row 1, Col 4</td>
+    </tr>
+    <tr>
+      <td>Row 2, Col 1</td>
+      <td>Row 2, Col 2</td>
+      <td>Row 2, Col 3</td>
+      <td>Row 2, Col 4</td>
+    </tr>
+  </tbody>
+</table>
     <h1>Hello, GitHub Pages!</h1>
     <button id="myButton">Click me</button>
     <p id="message"></p>
