--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   </thead>
   <tbody>
     <tr>
-      <td>Row 1, Col 1</td>
-      <td>Row 1, Col 2</td>
-      <td>Row 1, Col 3</td>
-      <td>Row 1, Col 4</td>
+      <td><input type="radio" name="rowSelect"></td>
+      <td>File1.nc</td>
+      <td>41k</td>
+      <td>12/26/25 19:20</td>
     </tr>
     <tr>
-      <td>Row 2, Col 1</td>
-      <td>Row 2, Col 2</td>
-      <td>Row 2, Col 3</td>
-      <td>Row 2, Col 4</td>
+      <td><input type="radio" name="rowSelect"></td>
+      <td>File2.nc</td>
+      <td>100k</td>
+      <td>12/26/25 19:22</td>
     </tr>
   </tbody>
 </table>
