--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
         </tr>
       </tbody>
     </table>
+    <label>Messages:</label>
     <textarea id="message-box" 
               readonly rows="10" 
               cols="50"
-              title="Messages:"></textarea>
+              style="margin-top: 5px;">
+              </textarea>
 
     <script src="script.js"></script>
   </body>
