--- a/index.html
+++ b/index.html
@@ -103,13 +103,14 @@
         </tr>
       </tbody>
     </table>
-    <label>Messages:</label>
-    <textarea id="message-box" 
-              readonly rows="10" 
-              cols="50"
-              style="margin-top: 5px;">
-              </textarea>
-
+    <p style="margin-top:10px">
+      <label>Messages:</label>
+      <textarea id="message-box" 
+                readonly rows="10" 
+                cols="50"
+                style="margin-top: 5px;">
+                </textarea>
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
