--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <textarea border="1">Sending: <span id="progress-percent">0%</span></textarea>
+    <textarea border="1">Sending: 0%</textarea>
     <div class="progress-container">
       <div class="progress-bar" id="progress-bar"></div>
     </div>
