--- a/index.html
+++ b/index.html
@@ -4,46 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CNC Drip Feed Server</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <textarea border="1">Sending: 0%</textarea>
+    <p>
+    <span id="sendStatus">Uninit</span>: <span id="percentSent">0</span>%
+    </p>
     <div class="progress-container">
       <div class="progress-bar" id="progress-bar"></div>
     </div>
     
     <div style="margin-top: 10px;">
-      <button onclick="startSending()">Start Sending</button>
-      <button onclick="pauseSending()">Pause Sending</button>
-      <button onclick="endSending()">End Sending</button>
+      <a onClick="sendFunc('Sending', 'startSend')"><button>Start Sending</button></a>
+      <a onClick="sendFunc('Paused', 'pauseSend')"><button>Pause Sending</button></a>
+      <a onClick="sendFunc('Stopped', 'stopSend')"><button>Stop Sending</button></a>
     </div>
-    <table border="1">
+    <table border="1" id="fileTable">
       <thead>
         <tr>
           <th></th>
           <th>File Name</th>
-          <th>File Size</th>
+          <th>Size (bytes)</th>
           <th>Date/Time Added</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td><input type="radio" name="rowSelect"></td>
-          <td>File1.nc</td>
-          <td>41k</td>
-          <td>12/26/25 19:20</td>
-        </tr>
-        <tr>
-          <td><input type="radio" name="rowSelect"></td>
-          <td>File2.nc</td>
-          <td>100k</td>
-          <td>12/26/25 19:22</td>
-        </tr>
       </tbody>
     </table>
-    <div style="margin-bottom: 50px;">
-      <button onclick="deleteFile()">Delete File</button>
-      <button onclick="refreshTable()">Refresh Table</button>
+    <div>
+      <a onClick="deleteFile()"><button>Delete File</button></a>
+      <a onClick="loadFiles()"><button>Refresh Table</button></a>
+    </div>
+    <div style="margin-bottom: 30px;"> 
+      <input type="file" id="fileInput">
+      <button onclick="uploadFile()">Upload</button>
+      <div id="status"></div>
     </div>
     <table border="1">
       <thead>
@@ -53,20 +49,23 @@
         <tr>
           <td>Baud Rate</td>
           <td>
-            <select>
+            <select id="baudRate">
+              <option value="empty" selected disabled></option>
               <option value="9600">9600</option>
               <option value="19200">19200</option>
               <option value="38400">38400</option>
               <option value="57600">57600</option>
-              <option value="115200" selected>115200</option>
+              <option value="115200">115200</option>
             </select>
           </td>
         </tr>
         <tr>
           <td>Data Bits</td>
           <td>
-            <select>
-              <option value="7" selected>7</option>
+            <select id="dataBits">
+              <option value="empty" selected disabled></option>
+              <option value="6">6</option>
+              <option value="7">7</option>
               <option value="8">8</option>
             </select>
           </td>
@@ -74,42 +73,49 @@
         <tr>
           <td>Parity</td>
           <td>
-            <select>
+            <select id="parity">
+              <option value="empty" selected disabled></option>
               <option value="none">None</option>
-              <option value="even" selected>Even</option>
+              <option value="even">Even</option>
               <option value="odd">Odd</option>
-              <option value="mark">Mark</option>
-              <option value="space">Space</option>
+              <!-- <option value="mark">Mark</option> 
+              <option value="space">Space</option> -->
             </select>
           </td>
         </tr>
         <tr>
           <td>Stop Bits</td>
           <td>
-            <select>
+            <select id="stopBits">
+              <option value="empty" selected disabled></option>
               <option value="1">1</option>
-              <option value="2" selected>2</option>
+              <option value="2">2</option>
             </select>
           </td>
         </tr>
         <tr>
           <td>Flow Control</td>
           <td>
-            <select>
+            <select id="flowControl">
+              <option value="empty" selected disabled></option>
               <option value="none">None</option>
-              <option value="rtscts" selected>RTS/CTS</option>
+              <option value="rtscts">RTS/CTS</option>
               <option value="xonxoff">XON/XOFF</option>
             </select>
           </td>
         </tr>
       </tbody>
     </table>
+    <div style="margin-bottom: 30px;">
+      <a><button onclick="getParams()">Get Params</button></a>
+      <a><button onclick="setParams()">Set Params</button></a>
+    </div>
     <p style="margin-top:10px">
       <label>Messages:</label>
       <br>
-      <textarea id="message-box" 
-                readonly rows="10" 
-                cols="50"
+      <textarea id="messageBox" 
+                readonly rows="8" 
+                cols="40"
                 style="margin-top: 5px;">
                 </textarea>
     </p>
